refactor: Facade 및 Service 책임 분산 / Facade 패키지 추가